hphp/hack/test/typecheck/inout/bad_inout_decl_strict_no_type.php
<?hh // strict

function test(inout $x): noreturn {
  throw new Exception('foo');
}
